--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -9,6 +9,10 @@
   outline: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
