--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,5 +16,5 @@ html {
 body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  background: #F5F5F5;
+  background: #101010;
 }
